feat: Refactor expression resolution and error handling
Refactored the process of resolving expressions in ExpressionResolver and PlaceholderReplacer. Included a new method "setContext" in ExpressionResolver, which separately sets the context against which the expression will be resolved. Error handling is also streamlined with new ExceptionUtil class. Enhanced debug logging has been implemented.